--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         
-        <meta name="description" content="Web site created using create-react-app"/>
+        <meta name="description" content="Mini Finance Web site created using create-react-app"/>
         <meta name="author" content="Tooplate">
 
         <title>Mini Finance Dashboard Template</title>
@@ -18,13 +18,13 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+        <link href="../css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/apexcharts.css" rel="stylesheet">
+        <link href="../css/apexcharts.css" rel="stylesheet">
 
-        <link href="css/tooplate-mini-finance.css" rel="stylesheet">
+        <link href="../css/tooplate-mini-finance.css" rel="stylesheet">
 
 <!-- 
     Tooplate 2135 Mini Finance
@@ -39,10 +39,10 @@
         </div>
 
                 <!-- JAVASCRIPT FILES -->
-                <script src="js/jquery.min.js"></script>
-                <script src="js/bootstrap.bundle.min.js"></script>
-                <script src="js/apexcharts.min.js"></script>
-                <script src="js/custom.js"></script>
+                <script src="../js/jquery.min.js"></script>
+                <script src="../js/bootstrap.bundle.min.js"></script>
+                <script src="../js/apexcharts.min.js"></script>
+                <script src="../js/custom.js"></script>
         
                 <script type="text/javascript">
                     var options = {
