--- a/public/index.html
+++ b/public/index.html
@@ -41,21 +41,6 @@
         <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
         -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.globe.min.js"></script>
-        <script>
-            VANTA.GLOBE({
-              el: "body",
-              mouseControls: false,
-              touchControls: false,
-              gyroControls: false,
-              minHeight: 200.00,
-              minWidth: 200.00,
-              color: 0x1678fb,
-              color2: 0x1678fb,
-              scale: 1.00,
-              scaleMobile: 1.00,
-              backgroundColor: 0xffffff
-            })
-            </script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     </body>
 </html>
