--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,6 @@
     <body>
         <div id="root"></div>
         <!-- single page app in bundle.js -->
-    <script src="/mini-finance/build/bundle.js"></script>
+    <!-- <script src="/mini-finance/build/bundle.js"></script> -->
     </body>
 </html>
