--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Mini Finance Web site created using create-react-app"
+            content="Mini Finance Website created using create-react-app"
         />
-        <meta name="author" content="Tooplate" />
-        <title>Mini Finance Dashboard Template</title>
+        <title>Mini Finance</title>
         <!-- Start Single Page Apps for GitHub Pages -->
         <script type="text/javascript">
             // Single Page Apps for GitHub Pages
