--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Mini Finance Website created using create-react-app" />
+        <meta name="description" content="Mini Finance Website created using vite" />
         <title>Mini Finance</title>
         <!-- Start Single Page Apps for GitHub Pages -->
         <script type="text/javascript">
@@ -40,5 +40,6 @@
     </head>
     <body>
         <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
